# Cpp-Primer

./: .gitignore  CMakeLists.txt
ch01/: README.md  ex1_10.cpp  ex1_11.cpp  ex1_20.cpp  ex1_21.cpp  ex1_22.cpp  ex1_23.cpp  ex1_4.cpp  ex1_5.cpp  ex1_9.cpp
ch02/: README.md  ex2_34.cpp  ex2_35.cpp  ex2_4.cpp  ex2_42_1.cpp  ex2_42_2.cpp  ex2_42_3.cpp
ch03/: README.md  ex3_17.cpp  ex3_19.cpp  ex3_37.cpp  ex3_6.cpp
ch04/: README.md  ex4_21.cpp  ex4_22.cpp  ex4_28.cpp
ch05/: README.md  ex5_17.cpp  ex5_25.cpp
ch06/: README.md  ex6_10.cpp  ex6_11.cpp  ex6_12.cpp  ex6_17.cpp  ex6_21.cpp  ex6_25_26.cpp  ex6_33.cpp  ex6_42.cpp  ex6_44.cpp  ex6_47.cpp  ex6_51.cpp  ex6_54_55_56.cpp  fact.cc  factMain.cc
ch07/: README.md  ex7_02.h  ex7_03.cpp  ex7_04.h  ex7_05.h  ex7_06.h  ex7_07.cpp  ex7_09.h  ex7_11.cpp  ex7_11.h  ex7_12.h  ex7_13.cpp  ex7_15.h  ex7_21.h  ex7_22.h  ex7_23.h  ex7_24.h  ex7_26.cpp  ex7_26.h  ex7_27.h  ex7_27_TEST.cpp  ex7_31.h  ex7_32.h  ex7_41.cpp  ex7_41.h  ex7_41_TEST.cpp  ex7_43.cpp  ex7_50.h  ex7_53.h  ex7_57.h
ch08/: README.md  ex8_02.cpp  ex8_04.cpp  ex8_05.cpp  ex8_06.cpp  ex8_07.cpp  ex8_08.cpp  ex8_09.cpp  ex8_10.cpp  ex8_11.cpp  ex8_13.cpp
ch09/: README.md  ex9_13.cpp  ex9_14.cpp  ex9_18.cpp  ex9_19.cpp  ex9_20.cpp  ex9_22.cpp  ex9_26.cpp  ex9_27.cpp  ex9_31_1.cpp  ex9_31_2.cpp  ex9_33.cpp  ex9_34.cpp  ex9_47_2.cpp  ex9_49.cpp  ex9_50.cpp  ex9_52.cpp
ch10/: README.md  ex10_03_04.cpp  ex10_06.cpp  ex10_07.cpp  ex10_09.cpp  ex10_11.cpp  ex10_12.cpp  ex10_16.cpp  ex10_17.cpp  ex10_25.cpp  ex10_27.cpp  ex10_28.cpp  ex10_30.cpp  ex10_34_35_36_37.cpp  ex10_42.cpp
ch11/: README.md  ex11_12_13.cpp  ex11_14.cpp  ex11_16.cpp  ex11_20.cpp  ex11_23.cpp  ex11_27_28_29_30.cpp  ex11_31.cpp  ex11_32.cpp  ex11_33.cpp  ex11_38.cpp  ex11_3_4.cpp  ex11_7.cpp
ch12/: README.md  ex12_02.h  ex12_06.cpp  ex12_07.cpp  ex12_16.cpp  ex12_19.h  ex12_22.h  ex12_27_30.cpp  ex12_28.cpp  ex12_32.cpp
ch13/: README.md  ex13_26.h  ex13_31.cpp  ex13_34_36_37.cpp  ex13_42_TextQuery.cpp  ex13_48.cpp  ex13_49_Message.cpp  ex13_58.cpp
ch14/: README.md  ex14_16_StrBlob.h  ex14_16_StrVecMain.cpp  ex14_16_StringMain.cpp  ex14_18_StrBlob.h  ex14_18_StringMain.cpp  ex14_23_TEST.cpp  ex14_26_StrBlob.h  ex14_26_StrVecMain.cpp  ex14_26_StringMain.cpp  ex14_27_28_StrBlob.h  ex14_30_StrBlob.h  ex14_36.cpp  ex14_37.cpp  ex14_38_39.cpp  ex14_40.cpp  ex14_42.cpp
ch15/: README.md  ex15.23.cpp  ex15.31.32.33.cpp
ch15/ex15.1.2.3/: main.cpp
ch15/ex15.11/: bulk_quote.cpp  bulk_quote.h  limit_quote.cpp  main.cpp  quote.cpp
ch15/ex15.12.13.14/: bulk_quote.cpp  bulk_quote.h  limit_quote.cpp  limit_quote.h  main.cpp  quote.cpp
ch15/ex15.15.16.17/: bulk_quote.cpp  bulk_quote.h  disc_quote.h  limit_quote.cpp  limit_quote.h  main.cpp  quote.cpp  quote.h
ch15/ex15.18.19.20/: main.cpp
ch15/ex15.21.22/: main.cpp
ch15/ex15.26/: bulk_quote.h  disc_quote.h  limit_quote.cpp  main.cpp  quote.h
ch15/ex15.27/: bulk_quote.cpp  main.cpp  quote.cpp
ch15/ex15.28.29/: bulk_quote.h  main.cpp
ch15/ex15.30/: basket.cpp  basket.h  bulk_quote.h  main.cpp  quote.cpp  quote.h
ch15/ex15.34.35.36.38/: StrBlob.h  andquery.h  binaryquery.h  main.cpp  notquery.h  orquery.h  query.h  query_base.h  queryresult.cpp  queryresult.h  textquery.cpp  textquery.h  wordquery.h
ch15/ex15.39.40/: main.cpp  query.cpp  query.h  textquery.cpp  textquery.h
ch15/ex15.4.5.6/: main.cpp
ch15/ex15.42_b/: main.cpp  notquery.cpp  orquery.cpp  queryhistory.cpp  queryhistory.h  queryresult.cpp  queryresult.h  textquery.cpp  textquery.h
ch15/ex15.42_c/: andquery.cpp  andquery.h  binaryquery.h  main.cpp  notquery.h  orquery.h  query.cpp  query.h  query_base.h  queryresult.cpp  queryresult.h  wordquery.h
ch15/ex15.7/: limit_quote.cpp
ch15/ex15.8.9.10/: ex15.8.9.10.cpp
ch15/ex15.9/: bulk_quote.cpp  bulk_quote.h  main.cpp  quote.h
ch16/ex16.12.13/: Blob.h  blobptr.h  main.cpp
ch16/ex16.14.15/: Screen.h  main.cpp
ch16/ex16.16/: main.cpp  vec.h
ch16/ex16.17.18/: main.cpp
ch16/ex16.19.20/: main.cpp
ch16/ex16.21.22/: DebugDelete.h  main.cpp  wy_queryresult.cpp  wy_queryresult.h  wy_textquery.cpp  wy_textquery.h
ch16/ex16.24/: Blob.h  blobptr.h  main.cpp
ch16/ex16.25.26/: main.cpp
ch16/ex16.28/: delete.hpp  main.cpp  shared_pointer.hpp  unique_pointer.h
ch16/ex16.29/: Blob.h  DebugDelete.h  main.cpp  shared_pointer.h  unique_pointer.h
ch16/ex16.32.33.34.35.36/: main.cpp
ch16/ex16.37.38.39/: main.cpp
ch16/ex16.4/: main.cpp
ch16/ex16.40/: main.cpp
ch16/ex16.41/: main.cpp
ch16/ex16.42.43.44.45.46/: main.cpp
ch16/ex16.47/: main.cpp
ch16/ex16.48/: main.cpp
ch16/ex16.49.50/: main.cpp
ch16/ex16.5/: main.cpp
ch16/ex16.51.52/: main.cpp
ch16/ex16.53.54.55/: main.cpp
ch16/ex16.56.57/: main.cpp
ch16/ex16.58.59/: strvec.cpp  strvec.h  vec.h
ch16/ex16.6/: main.cpp
ch16/ex16.60.61/: main.cpp
ch16/ex16.62/: Sales_data.cc  Sales_data.h  main.cpp
ch16/ex16.63.64/: main.cpp
ch17/: 17_24.cpp  17_25.cpp  17_27.cpp  17_35_36.cpp  README.md  ex17_10.cpp  ex17_11_12_13.cpp  ex17_14_15_16.cpp  ex17_17_18.cpp  ex17_19_20.cpp  ex17_1_2.cpp  ex17_21.cpp  ex17_23.cpp  ex17_28_29_30.cpp  ex17_33.cpp  ex17_4_5_6_7_8.cpp  ex17_4_5_6_7_8_SalesData.cpp  ex17_4_5_6_7_8_SalesData.h  ex17_9.cpp
ch18/: 18_18 18_19.cpp  18_20.cpp  README.md  ex18.1.2.3.cpp  ex18.12.13.14.cpp  ex18.15.16.17.cpp  ex18.25.cpp  ex18_29.cpp
ch19/: README.md  ex19_18.cpp  ex19_20.cpp  ex19_21_22_23_24_25.cpp  ex19_3_4.cpp
complex/: complex.h  complex_main.cpp
containers/: allocator.cpp  array.cpp  deque.cpp  forward_list.cpp  list.cpp  map.cpp  moveable.h  multimap.cpp  multiset.cpp  mystring.h  queue.cpp  set.cpp  stack.cpp  stl_test.cpp  unordered_map.cpp  unordered_multimap.cpp  unordered_multiset.cpp  unordered_set.cpp  vector.cpp
data/: given_to_transform.txt  word_transformation.txt
oop/: account.cpp  account.h  complex_test.cpp  sample.cpp
singleton/: A.cpp  A.h
stone/: stone.cpp  stone.h
string/: string.h  string_main.cpp
template/: member_template.cpp  specialization.cpp  template_template_parameter.cpp
(+7 files in other folders)
