cmake_minimum_required(VERSION 3.9)
project(CPP-Primer)
set(CMAKE_CXX_STANDARD 14)

#链接库
#aux_source_directory(include CPP-Primer)
#add_library(cpp-primer ${CPP-Primer})
#LINK_LIBRARIES(cpp-primer)

add_executable(ex1_1 ch01/ex1_1.cpp)
add_executable(ex1_4 ch01/ex1_4.cpp)
add_executable(ex1_5 ch01/ex1_5.cpp)
add_executable(ex1_9 ch01/ex1_9.cpp)
add_executable(ex1_10 ch01/ex1_10.cpp)
add_executable(ex1_11 ch01/ex1_11.cpp)
add_executable(ex1_16 ch01/ex1_16.cpp)
add_executable(ex1_20 ch01/ex1_20.cpp)
add_executable(ex1_21 ch01/ex1_21.cpp)
add_executable(ex1_22 ch01/ex1_22.cpp)
add_executable(ex1_23 ch01/ex1_23.cpp)
add_executable(ex2_4 ch02/ex2_4.cpp)
add_executable(ex2_34 ch02/ex2_34.cpp)
add_executable(ex2_35 ch02/ex2_35.cpp)
add_executable(ex2_42_1 ch02/ex2_42_1.cpp)
add_executable(ex2_42_2 ch02/ex2_42_2.cpp)
add_executable(ex2_42_3 ch02/ex2_42_3.cpp)
add_executable(ex3_6 ch03/ex3_6.cpp)
add_executable(ex3_37 ch03/ex3_37.cpp)
add_executable(ex3_17 ch03/ex3_17.cpp)
add_executable(ex4_21 ch04/ex4_21.cpp)
add_executable(ex4_22 ch04/ex4_22.cpp)
add_executable(ex4_28 ch04/ex4_28.cpp)
add_executable(ex5_25 ch05/ex5_25.cpp)
add_executable(ex5_17 ch05/ex5_17.cpp)
add_executable(ex6_10 ch06/ex6_10.cpp)
add_executable(ex6_11 ch06/ex6_11.cpp)
add_executable(ex6_12 ch06/ex6_12.cpp)
add_executable(ex6_17 ch06/ex6_17.cpp)
add_executable(ex6_21 ch06/ex6_21.cpp)
add_executable(ex6_25_26 ch06/ex6_25_26.cpp)
add_executable(ex6_33 ch06/ex6_33.cpp)
add_executable(ex6_42 ch06/ex6_42.cpp)
add_executable(ex6_44 ch06/ex6_44.cpp)
add_executable(ex6_47 ch06/ex6_47.cpp)
add_executable(ex6_51 ch06/ex6_51.cpp)
add_executable(ex6_54_55_56 ch06/ex6_54_55_56.cpp)
add_executable(fact ch06/fact.cc)
add_executable(factMain ch06/factMain.cc)
add_executable(ex7_01 ch07/ex7_01.cpp)
add_executable(ex7_03 ch07/ex7_03.cpp)
add_executable(ex7_07 ch07/ex7_07.cpp)
add_executable(ex7_11 ch07/ex7_11.cpp)
add_executable(ex7_13 ch07/ex7_13.cpp)
add_executable(ex7_27_TEST ch07/ex7_27_TEST.cpp)
add_executable(ex7_41_TEST ch07/ex7_41_TEST.cpp)
add_executable(ex7_43 ch07/ex7_43.cpp)
add_executable(ex8_02 ch08/ex8_02.cpp)
add_executable(ex8_04 ch08/ex8_04.cpp)
add_executable(ex8_05 ch08/ex8_05.cpp)
add_executable(ex8_06 ch08/ex8_06.cpp)
add_executable(ex8_07 ch08/ex8_07.cpp)
add_executable(ex8_08 ch08/ex8_08.cpp)
add_executable(ex8_09 ch08/ex8_09.cpp)
add_executable(ex8_10 ch08/ex8_10.cpp)
add_executable(ex8_11 ch08/ex8_11.cpp)
add_executable(ex8_13 ch08/ex8_13.cpp)
add_executable(complex_main complex/complex_main.cpp)
add_executable(complex_test oop/complex_test.cpp)
add_executable(string_main string/string_main.cpp)