cmake_minimum_required(VERSION 3.9)
project(CPP-Primer)
set(CMAKE_CXX_STANDARD 14)

#链接库
#aux_source_directory(include CPP-Primer)
#add_library(cpp-primer ${CPP-Primer})
#LINK_LIBRARIES(cpp-primer)

add_executable(ex1_1 ch01/ex1_1.cpp)
add_executable(ex1_4 ch01/ex1_4.cpp)
add_executable(ex1_5 ch01/ex1_5.cpp)
add_executable(ex1_9 ch01/ex1_9.cpp)
add_executable(ex1_10 ch01/ex1_10.cpp)
add_executable(ex1_11 ch01/ex1_11.cpp)
add_executable(ex1_16 ch01/ex1_16.cpp)
add_executable(ex1_20 ch01/ex1_20.cpp)
add_executable(ex1_21 ch01/ex1_21.cpp)
add_executable(ex1_22 ch01/ex1_22.cpp)
add_executable(ex1_23 ch01/ex1_23.cpp)
add_executable(ex2_4 ch02/ex2_4.cpp)
add_executable(ex2_34 ch02/ex2_34.cpp)
add_executable(ex2_35 ch02/ex2_35.cpp)
add_executable(ex2_42_1 ch02/ex2_42_1.cpp)
add_executable(ex2_42_2 ch02/ex2_42_2.cpp)
add_executable(ex2_42_3 ch02/ex2_42_3.cpp)
add_executable(ex3_6 ch03/ex3_6.cpp)
add_executable(ex3_37 ch03/ex3_37.cpp)
add_executable(ex3_17 ch03/ex3_17.cpp)
add_executable(ex4_21 ch04/ex4_21.cpp)
add_executable(ex4_22 ch04/ex4_22.cpp)
add_executable(ex4_28 ch04/ex4_28.cpp)
add_executable(ex5_25 ch05/ex5_25.cpp)
add_executable(ex5_17 ch05/ex5_17.cpp)
add_executable(ex6_10 ch06/ex6_10.cpp)
add_executable(ex6_11 ch06/ex6_11.cpp)
add_executable(ex6_12 ch06/ex6_12.cpp)
add_executable(ex6_17 ch06/ex6_17.cpp)
add_executable(ex6_21 ch06/ex6_21.cpp)
add_executable(ex6_25_26 ch06/ex6_25_26.cpp)
add_executable(ex6_33 ch06/ex6_33.cpp)
add_executable(ex6_42 ch06/ex6_42.cpp)
add_executable(ex6_44 ch06/ex6_44.cpp)
add_executable(ex6_47 ch06/ex6_47.cpp)
add_executable(ex6_51 ch06/ex6_51.cpp)
add_executable(ex6_54_55_56 ch06/ex6_54_55_56.cpp)
add_executable(fact ch06/fact.cc)
add_executable(factMain ch06/factMain.cc)
add_executable(ex7_01 ch07/ex7_01.cpp)
add_executable(ex7_03 ch07/ex7_03.cpp)
add_executable(ex7_07 ch07/ex7_07.cpp)
add_executable(ex7_11 ch07/ex7_11.cpp)
add_executable(ex7_13 ch07/ex7_13.cpp)
add_executable(ex7_27_TEST ch07/ex7_27_TEST.cpp)
add_executable(ex7_41_TEST ch07/ex7_41_TEST.cpp)
add_executable(ex7_43 ch07/ex7_43.cpp)
add_executable(ex8_02 ch08/ex8_02.cpp)
add_executable(ex8_04 ch08/ex8_04.cpp)
add_executable(ex8_05 ch08/ex8_05.cpp)
add_executable(ex8_06 ch08/ex8_06.cpp)
add_executable(ex8_07 ch08/ex8_07.cpp)
add_executable(ex8_08 ch08/ex8_08.cpp)
add_executable(ex8_09 ch08/ex8_09.cpp)
add_executable(ex8_10 ch08/ex8_10.cpp)
add_executable(ex8_11 ch08/ex8_11.cpp)
add_executable(ex8_13 ch08/ex8_13.cpp)
add_executable(complex_main complex/complex_main.cpp)
add_executable(complex_test oop/complex_test.cpp)
add_executable(string_main string/string_main.cpp)
add_executable(sample oop/sample.cpp)
add_executable(A singleton/A.cpp)
add_executable(account oop/account.cpp)
add_executable(stone stone/stone.cpp)
add_executable(C++OOP2-ex oop/C++OOP2-ex.cpp)
add_executable(member_tmplate template/member_template.cpp)
add_executable(template_template_parameter template/template_template_parameter.cpp)
add_executable(stl_test containers/stl_test.cpp)
add_executable(array containers/array.cpp)
add_executable(vector containers/vector.cpp)
add_executable(list containers/list.cpp)
add_executable(forward_list containers/forward_list.cpp)
add_executable(deque containers/deque.cpp)
add_executable(stack containers/stack.cpp)
add_executable(queue containers/queue.cpp)
add_executable(multiset containers/multiset.cpp)
add_executable(multimap containers/multimap.cpp)
add_executable(unordered_multiset containers/unordered_multiset.cpp)
add_executable(unordered_multimap containers/unordered_multimap.cpp)
add_executable(set containers/set.cpp)
add_executable(map containers/map.cpp)
add_executable(unordered_map containers/unordered_map.cpp)
add_executable(unordered_set containers/unordered_set.cpp)
add_executable(allocator containers/allocator.cpp)
add_executable(ex11_3_4 ch11/ex11_3_4.cpp)
add_executable(ex11_7 ch11/ex11_7.cpp)
add_executable(ex11_8 ch11/ex11_8.cpp)
add_executable(ex11_9_10 ch11/ex11_9_10.cpp)
add_executable(ex11_11 ch11/ex11_11.cpp)
add_executable(ex11_12_13 ch11/ex11_12_13.cpp)
add_executable(ex11_14 ch11/ex11_14.cpp)
add_executable(ex11_20 ch11/ex11_20.cpp)
add_executable(ex11_23 ch11/ex11_23.cpp)
add_executable(ex11_24_25_26 ch11/ex11_24_25_26.cpp)
add_executable(ex11_27_28_29_30 ch11/ex11_27_28_29_30.cpp)
add_executable(ex11_31 ch11/ex11_31.cpp)
add_executable(ex11_32 ch11/ex11_32.cpp)
add_executable(ex11_33 ch11/ex11_33.cpp)
add_executable(ex11_38 ch11/ex11_38.cpp)
add_executable(ex9_13 ch09/ex9_13.cpp)
add_executable(ex9_14 ch09/ex9_14.cpp)
add_executable(ex9_15 ch09/ex9_15.cpp)
add_executable(ex9_16 ch09/ex9_16.cpp)
add_executable(ex9_18 ch09/ex9_18.cpp)
add_executable(ex9_19 ch09/ex9_19.cpp)
add_executable(ex9_20 ch09/ex9_20.cpp)
add_executable(ex9_22 ch09/ex9_22.cpp)
add_executable(ex9_24 ch09/ex9_24.cpp)
add_executable(ex9_26 ch09/ex9_26.cpp)
add_executable(ex9_27 ch09/ex9_27.cpp)
add_executable(ex9_31_1 ch09/ex9_31_1.cpp)
add_executable(ex9_31_2 ch09/ex9_31_2.cpp)
add_executable(ex9_32 ch09/ex9_32.cpp)
add_executable(ex9_33 ch09/ex9_33.cpp)
add_executable(ex9_34 ch09/ex9_34.cpp)
add_executable(ex9_38 ch09/ex9_38.cpp)
add_executable(ex9_41 ch09/ex9_41.cpp)
add_executable(ex9_43 ch09/ex9_43.cpp)
add_executable(ex9_44 ch09/ex9_44.cpp)
add_executable(ex9_45 ch09/ex9_45.cpp)
add_executable(ex9_46 ch09/ex9_46.cpp)
add_executable(ex9_47_1 ch09/ex9_47_1.cpp)
add_executable(ex9_47_2 ch09/ex9_47_2.cpp)
add_executable(ex9_49 ch09/ex9_49.cpp)
add_executable(ex9_50 ch09/ex9_50.cpp)
add_executable(ex9_51 ch09/ex9_51.cpp)
add_executable(ex9_52 ch09/ex9_52.cpp)
add_executable(ex10_01_02 ch10/ex10_01_02.cpp)
add_executable(ex10_03_04 ch10/ex10_03_04.cpp)
add_executable(ex10_06 ch10/ex10_06.cpp)
add_executable(ex10_07 ch10/ex10_07.cpp)
add_executable(ex10_09 ch10/ex10_09.cpp)
add_executable(ex10_11 ch10/ex10_11.cpp)
add_executable(ex10_12 ch10/ex10_12.cpp)
add_executable(ex10_13 ch10/ex10_13.cpp)
add_executable(ex10_16 ch10/ex10_16.cpp)
add_executable(ex10_17 ch10/ex10_17.cpp)
add_executable(ex10_18_19 ch10/ex10_18_19.cpp)
add_executable(ex10_20_21 ch10/ex10_20_21.cpp)
add_executable(ex10_22 ch10/ex10_22.cpp)
add_executable(ex10_24 ch10/ex10_24.cpp)
add_executable(ex10_25 ch10/ex10_25.cpp)
add_executable(ex10_27 ch10/ex10_27.cpp)
add_executable(ex10_28 ch10/ex10_28.cpp)
add_executable(ex10_29 ch10/ex10_29.cpp)
add_executable(ex10_30 ch10/ex10_30.cpp)
add_executable(ex10_31 ch10/ex10_31.cpp)
add_executable(ex10_32 ch10/ex10_32.cpp)
add_executable(ex10_33 ch10/ex10_33.cpp)
add_executable(ex10_34_35_36_37 ch10/ex10_34_35_36_37.cpp)
add_executable(ex12_02_TEST ch12/ex12_02_TEST.cpp)
add_executable(ex12_06 ch12/ex12_06.cpp)
add_executable(ex12_07 ch12/ex12_07.cpp)
add_executable(ex12_10 ch12/ex12_10.cpp)
add_executable(ex12_11 ch12/ex12_11.cpp)
add_executable(ex12_12 ch12/ex12_12.cpp)
add_executable(ex12_13 ch12/ex12_13.cpp)
add_executable(ex12_14 ch12/ex12_14.cpp)
add_executable(ex12_15 ch12/ex12_15.cpp)
add_executable(ex12_16 ch12/ex12_16.cpp)
add_executable(ex12_17_18 ch12/ex12_17_18.cpp)
add_executable(ex12_20 ch12/ex12_20.cpp)
add_executable(ex12_23 ch12/ex12_23.cpp)
add_executable(ex12_24 ch12/ex12_24.cpp)
add_executable(ex12_26 ch12/ex12_26.cpp)
add_executable(ex12_27_30_TEST ch12/ex12_27_30_TEST.cpp)
add_executable(ex12_28 ch12/ex12_28.cpp)
add_executable(ex12_32_TEST ch12/ex12_32_TEST.cpp)
add_executable(ex12_33_TEST ch12/ex12_33_TEST.cpp)
add_executable(ex11_16 ch11/ex11_16.cpp)
add_executable(ex13_13 ch13/ex13_13.cpp)